--- a/src/index.html
+++ b/src/index.html
@@ -6,32 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Image finder</title>
 
-    <!-- Don't forget to delete this style tag. -->
-    <!-- <style>
-      body {
-        min-height: 100vh;
-        margin: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      .intro {
-        text-align: center;
-      }
-
-      .intro h1 {
-        margin-top: 0;
-        font-weight: 500;
-        font-size: 40px;
-      }
-
-      .intro img {
-        display: block;
-        max-width: 100%;
-        height: auto;
-      }
-    </style> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+      crossorigin="anonymous"
+    />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -39,6 +19,8 @@
   </head>
 
   <body>
+    <div class="toast-container position-absolute top-0 end-0 p-3"></div>
+
     <form class="search-form" id="search-form">
       <input
         type="text"
@@ -47,11 +29,17 @@
         placeholder="Search images..."
       />
     </form>
-    <ul class="gallery">
-      <!-- Список <li> с карточками изображений -->
-    </ul>
-    <button>Load more</button>
-    <!-- HTML image reference example.
-      <img src="./images/intro.png" alt="" width="640" /> -->
+
+    <!-- <ul class="gallery">
+      Список <li> с карточками изображений
+    </ul> -->
+
+    <div class="row row-cols-1 row-cols-md-3 g-4"></div>
+
+    <div class="d-grid gap-2 col-3 mx-auto">
+      <button type="button" class="btn btn-primary btn-lg" disabled>
+        Load more
+      </button>
+    </div>
   </body>
 </html>
